kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-lab-1
  labels:
    environment: training
---
apiVersion: v1
kind: Namespace
metadata:
  name: student-lab-2
  labels:
    environment: training
