kubernetes/test-pod-student002.yaml
apiVersion: v1
kind: Pod
spec:
  containers:
    - name: kali
      image: cloudsec-lab2-kali:latest
      imagePullPolicy: IfNotPresent
      command: ["sleep", "3600"]
      resources:
        requests:
          cpu: "250m"
          memory: "256Mi"
        limits:
          cpu: "500m"
          memory: "512Mi"
  restartPolicy: Never
