kubernetes/target-service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: metasploitable
  namespace: student-${STUDENT_ID}-target
spec:
  selector:
    app: target
  ports:
  - port: 80
    targetPort: 80
